--- a/index.ipynb
+++ b/index.ipynb
@@ -319,13 +319,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code her"
+    "countries.remove(\"New Mexico\")"
    ]
   },
   {
