automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append(\"USA\")"
+    "countries.append(\"USA\")\n",
+    "countries."
    ]
   },
   {
