--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,7 @@
    "outputs": [],
    "source": [
     "countries.append(\"USA\")\n",
-    "countries."
+    "countries.remove(\"New Mexico\")"
    ]
   },
   {
