automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -444,7 +444,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = list(countries)"
+    "unique_countries = (countries)"
    ]
   },
   {
@@ -486,16 +486,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13"
+       "0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
