automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -440,11 +440,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = (countries)"
+    "unique_countries = set(countries)"
    ]
   },
   {
@@ -486,16 +486,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "-3"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
