--- a/index.ipynb
+++ b/index.ipynb
@@ -486,22 +486,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-3"
+       "3"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_of_repeats = len(unique_countries) - len(countries)\n",
+    "num_of_repeats = len(countries) - len(unique_countries) \n",
     "\n",
     "num_of_repeats # 3"
    ]
